added the debugging config, started metric refactoring
code now has a debugging config if we want to use breakpoints

added an endpoint /test and /test/{metric_name}

the second endpoints allows testing each metric separately

metrics have their folder and export file for the controller

added types.ts to allow the default Request (Express library) to use the parameters that openapi uses (req.openapi wasnt defined before for in-path parameters)
