# src/controllers/Default.ts
@@ -1,10 +1,17 @@
-'use strict';
+"use strict";
 
-import { Request, Response, NextFunction } from 'express';
-import * as utils from '../utils/writer';
-import * as Default from '../service/DefaultService';
+import { Request, Response, NextFunction, response } from "express";
+import * as utils from "../utils/writer";
+import * as Default from "../service/DefaultService";
+import * as Metrics from "../Metrics/metricExport";
+import { OpenApiRequest } from "../utils/types";
 
-export const CreateAuthToken = (req: Request, res: Response, next: NextFunction, body: any): void => {
+export const CreateAuthToken = (
+  req: OpenApiRequest,
+  res: Response,
+  next: NextFunction,
+  body: any
+): void => {
   Default.createAuthToken(body)
     .then((response: any) => {
       utils.writeJson(res, response);
@@ -14,9 +21,17 @@ export const CreateAuthToken = (req: Request, res: Response, next: NextFunction,
     });
 };
 
-export const PackageByNameGet = (req: Request, res: Response, next: NextFunction): void => {
-  const name: Default.PackageName = { name: req.params.name }; 
-  const xAuthorization: Default.AuthenticationToken = { token: req.headers.authorization ? req.headers.authorization.toString() : '' };
+export const PackageByNameGet = (
+  req: OpenApiRequest,
+  res: Response,
+  next: NextFunction
+): void => {
+  const name: Default.PackageName = { name: req.params.name };
+  const xAuthorization: Default.AuthenticationToken = {
+    token: req.headers.authorization
+      ? req.headers.authorization.toString()
+      : "",
+  };
   Default.packageByNameGet(name, xAuthorization)
     .then((response: any) => {
       utils.writeJson(res, response);
@@ -26,8 +41,17 @@ export const PackageByNameGet = (req: Request, res: Response, next: NextFunction
     });
 };
 
-export const PackageByRegExGet = (req: Request, res: Response, next: NextFunction, body:any): void => {
-  const xAuthorization: Default.AuthenticationToken = { token: req.headers.authorization ? req.headers.authorization.toString() : '' };
+export const PackageByRegExGet = (
+  req: OpenApiRequest,
+  res: Response,
+  next: NextFunction,
+  body: any
+): void => {
+  const xAuthorization: Default.AuthenticationToken = {
+    token: req.headers.authorization
+      ? req.headers.authorization.toString()
+      : "",
+  };
   Default.packageByRegExGet(body, xAuthorization)
     .then((response: any) => {
       utils.writeJson(res, response);
@@ -37,8 +61,17 @@ export const PackageByRegExGet = (req: Request, res: Response, next: NextFunctio
     });
 };
 
-export const PackageCreate = (req: Request, res: Response, next: NextFunction, body: any): void => {
-  const xAuthorization: Default.AuthenticationToken = { token: req.headers.authorization ? req.headers.authorization.toString() : '' };
+export const PackageCreate = (
+  req: OpenApiRequest,
+  res: Response,
+  next: NextFunction,
+  body: any
+): void => {
+  const xAuthorization: Default.AuthenticationToken = {
+    token: req.headers.authorization
+      ? req.headers.authorization.toString()
+      : "",
+  };
   Default.packageCreate(body, xAuthorization)
     .then((response: any) => {
       utils.writeJson(res, response);
@@ -48,9 +81,17 @@ export const PackageCreate = (req: Request, res: Response, next: NextFunction, b
     });
 };
 
-export const PackageDelete = (req: Request, res: Response, next: NextFunction): void => {
-  const xAuthorization: Default.AuthenticationToken = { token: req.headers.authorization ? req.headers.authorization.toString() : '' };
-  const id: Default.PackageID = { id: req.params.name }; 
+export const PackageDelete = (
+  req: OpenApiRequest,
+  res: Response,
+  next: NextFunction
+): void => {
+  const xAuthorization: Default.AuthenticationToken = {
+    token: req.headers.authorization
+      ? req.headers.authorization.toString()
+      : "",
+  };
+  const id: Default.PackageID = { id: req.params.name };
   Default.packageDelete(xAuthorization, id)
     .then((response: any) => {
       utils.writeJson(res, response);
@@ -60,9 +101,18 @@ export const PackageDelete = (req: Request, res: Response, next: NextFunction): 
     });
 };
 
-export const packageIdCostGET = (req: Request, res: Response, next: NextFunction,dependency:boolean): void => {
-  const xAuthorization: Default.AuthenticationToken = { token: req.headers.authorization ? req.headers.authorization.toString() : '' };
-  const id: Default.PackageID = { id: req.params.name }; 
+export const packageIdCostGET = (
+  req: OpenApiRequest,
+  res: Response,
+  next: NextFunction,
+  dependency: boolean
+): void => {
+  const xAuthorization: Default.AuthenticationToken = {
+    token: req.headers.authorization
+      ? req.headers.authorization.toString()
+      : "",
+  };
+  const id: Default.PackageID = { id: req.params.name };
   Default.packageIdCostGET(id, xAuthorization, dependency)
     .then((response: any) => {
       utils.writeJson(res, response);
@@ -72,9 +122,17 @@ export const packageIdCostGET = (req: Request, res: Response, next: NextFunction
     });
 };
 
-export const PackageRate = (req: Request, res: Response, next: NextFunction): void => {
-  const xAuthorization: Default.AuthenticationToken = { token: req.headers.authorization ? req.headers.authorization.toString() : '' };
-  const id: Default.PackageID = { id: req.params.name }; 
+export const PackageRate = (
+  req: OpenApiRequest,
+  res: Response,
+  next: NextFunction
+): void => {
+  const xAuthorization: Default.AuthenticationToken = {
+    token: req.headers.authorization
+      ? req.headers.authorization.toString()
+      : "",
+  };
+  const id: Default.PackageID = { id: req.params.name };
   Default.packageRate(id, xAuthorization)
     .then((response: any) => {
       utils.writeJson(res, response);
@@ -84,8 +142,16 @@ export const PackageRate = (req: Request, res: Response, next: NextFunction): vo
     });
 };
 
-export const PackageRetrieve = (req: Request, res: Response, next: NextFunction): void => {
-  const xAuthorization: Default.AuthenticationToken = { token: req.headers.authorization ? req.headers.authorization.toString() : '' };
+export const PackageRetrieve = (
+  req: OpenApiRequest,
+  res: Response,
+  next: NextFunction
+): void => {
+  const xAuthorization: Default.AuthenticationToken = {
+    token: req.headers.authorization
+      ? req.headers.authorization.toString()
+      : "",
+  };
   const id: Default.PackageID = { id: req.params.name };
   Default.packageRetrieve(xAuthorization, id)
     .then((response: any) => {
@@ -96,8 +162,17 @@ export const PackageRetrieve = (req: Request, res: Response, next: NextFunction)
     });
 };
 
-export const PackageUpdate = (req: Request, res: Response, next: NextFunction, body: any): void => {
-  const xAuthorization: Default.AuthenticationToken = { token: req.headers.authorization ? req.headers.authorization.toString() : '' };
+export const PackageUpdate = (
+  req: OpenApiRequest,
+  res: Response,
+  next: NextFunction,
+  body: any
+): void => {
+  const xAuthorization: Default.AuthenticationToken = {
+    token: req.headers.authorization
+      ? req.headers.authorization.toString()
+      : "",
+  };
   const id: Default.PackageID = { id: req.params.name };
   Default.packageUpdate(body, id, xAuthorization)
     .then((response: any) => {
@@ -108,8 +183,18 @@ export const PackageUpdate = (req: Request, res: Response, next: NextFunction, b
     });
 };
 
-export const PackagesList = (req: Request, res: Response, next: NextFunction, body: any, offset: string): void => {
-  const xAuthorization: Default.AuthenticationToken = { token: req.headers.authorization ? req.headers.authorization.toString() : '' };
+export const PackagesList = (
+  req: OpenApiRequest,
+  res: Response,
+  next: NextFunction,
+  body: any,
+  offset: string
+): void => {
+  const xAuthorization: Default.AuthenticationToken = {
+    token: req.headers.authorization
+      ? req.headers.authorization.toString()
+      : "",
+  };
   Default.packagesList(body, offset, xAuthorization)
     .then((response: any) => {
       utils.writeJson(res, response);
@@ -119,8 +204,16 @@ export const PackagesList = (req: Request, res: Response, next: NextFunction, bo
     });
 };
 
-export const RegistryReset = (req: Request, res: Response, next: NextFunction): void => {
-  const xAuthorization: Default.AuthenticationToken = { token: req.headers.authorization ? req.headers.authorization.toString() : '' };
+export const RegistryReset = (
+  req: OpenApiRequest,
+  res: Response,
+  next: NextFunction
+): void => {
+  const xAuthorization: Default.AuthenticationToken = {
+    token: req.headers.authorization
+      ? req.headers.authorization.toString()
+      : "",
+  };
   Default.registryReset(xAuthorization)
     .then((response: any) => {
       utils.writeJson(res, response);
@@ -130,8 +223,16 @@ export const RegistryReset = (req: Request, res: Response, next: NextFunction): 
     });
 };
 
-export const tracksGET = (req: Request, res: Response, next: NextFunction): void => {
-  const xAuthorization: Default.AuthenticationToken = { token: req.headers.authorization ? req.headers.authorization.toString() : '' };
+export const tracksGET = (
+  req: OpenApiRequest,
+  res: Response,
+  next: NextFunction
+): void => {
+  const xAuthorization: Default.AuthenticationToken = {
+    token: req.headers.authorization
+      ? req.headers.authorization.toString()
+      : "",
+  };
   Default.tracksGET(xAuthorization)
     .then((response: any) => {
       utils.writeJson(res, response);
@@ -141,8 +242,16 @@ export const tracksGET = (req: Request, res: Response, next: NextFunction): void
     });
 };
 
-export const testGET = (req: Request, res: Response, next: NextFunction): void => {
-  const xAuthorization: Default.AuthenticationToken = { token: req.headers.authorization ? req.headers.authorization.toString() : '' };
+export const testGET = (
+  req: OpenApiRequest,
+  res: Response,
+  next: NextFunction
+): void => {
+  const xAuthorization: Default.AuthenticationToken = {
+    token: req.headers.authorization
+      ? req.headers.authorization.toString()
+      : "",
+  };
   Default.testGET(xAuthorization)
     .then((response: any) => {
       utils.writeJson(res, response);
@@ -150,4 +259,26 @@ export const testGET = (req: Request, res: Response, next: NextFunction): void =
     .catch((response: any) => {
       utils.writeJson(res, response);
     });
+};
+
+export const testMetricNameGET = (
+  req: OpenApiRequest,
+  res: Response,
+  next: NextFunction
+): void => {
+  const metricName: Metrics.metricInterface = {name: req.openapi?.pathParams?.metric_name? req.openapi.pathParams.metric_name : ""}; 
+  const xAuthorization: Default.AuthenticationToken = {
+    token: req.headers.authorization
+      ? req.headers.authorization.toString()
+      : "",
+  };
+  if (metricName.name == "correctness") {
+    Metrics.getCorrectnessJSON(undefined, undefined, xAuthorization.token)
+      .then((response: any) => {
+        utils.writeJson(res, response);
+      })
+      .catch((response: any) => {
+        utils.writeJson(res, response);
+      });
+  }
 };
